[gd_scene load_steps=13 format=3 uid="uid://8cdwivrdfwrc"]

[ext_resource type="Texture2D" uid="uid://cu48qh4ctofaq" path="res://Addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_0ta88"]
[ext_resource type="Script" path="res://Scripts/game_over_ui.gd" id="1_a5cqj"]
[ext_resource type="Texture2D" uid="uid://bx1xa65vtyixf" path="res://Addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_82lcj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ehwd6"]
texture = ExtResource("1_0ta88")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="SystemFont" id="SystemFont_1hpqx"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_q86ag"]
font = SubResource("SystemFont_1hpqx")
font_size = 48
font_color = Color(0.47451, 0.172549, 0.176471, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jp85t"]
texture = ExtResource("2_82lcj")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 1
region_rect = Rect2(32, 48, 128, 120)

[sub_resource type="SystemFont" id="SystemFont_v8upa"]
font_names = PackedStringArray("Impact")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_t1kf7"]
font = SubResource("SystemFont_v8upa")
font_size = 24
font_color = Color(0.160784, 0.160784, 0.160784, 0.784314)

[sub_resource type="Animation" id="Animation_f8pa8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0431373, 0.0431373, 0.0431373, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(370, 400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(391.5, 100)]
}

[sub_resource type="Animation" id="Animation_dc8pd"]
resource_name = "default"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0431373, 0.0431373, 0.0431373, 0), Color(0.0431373, 0.0431373, 0.0431373, 0.854902)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottonPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1.3),
"transitions": PackedFloat32Array(5.27803, 1),
"update": 0,
"values": [Vector2(370, 673), Vector2(370, 400)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.366022),
"update": 0,
"values": [Vector2(391.5, -125), Vector2(391.5, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h0prq"]
_data = {
"RESET": SubResource("Animation_f8pa8"),
"default": SubResource("Animation_dc8pd")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_a5cqj")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.0431373, 0.0431373, 0.0431373, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 391.5
offset_top = 100.0
offset_right = 760.5
offset_bottom = 216.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ehwd6")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -48.0
offset_right = 126.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_q86ag")
horizontal_alignment = 1

[node name="BottonPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 400.0
offset_right = 782.0
offset_bottom = 593.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_jp85t")

[node name="CenterContainer" type="CenterContainer" parent="BottonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -86.5
offset_right = 176.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottonPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="TimeCounterText" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived :"
label_settings = SubResource("LabelSettings_t1kf7")

[node name="TimeCouterLabel" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_t1kf7")

[node name="MonsterText" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated :"
label_settings = SubResource("LabelSettings_t1kf7")

[node name="MonsterCouterLabel" type="Label" parent="BottonPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1234"
label_settings = SubResource("LabelSettings_t1kf7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h0prq")
}
autoplay = "default"
